--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
       comment = c(ORCID = "0000-0001-7097-700X")
     )
   )
-Description: Miscellaneaous statistical functions introduced and used in the
+Description: Miscellaneous statistical functions introduced and used in the
     manual "guide-R : Guide pour l’analyse de données d’enquêtes avec R"
     available at <https://larmarange.github.io/guide-R/>.
 License: GPL (>= 3)
@@ -22,8 +22,14 @@ Imports:
     cli,
     dplyr,
     labelled,
+    lifecycle,
     srvyr,
     tidyr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Language: en-US
