--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,6 +22,10 @@ reference:
   contents:
   - proportion
 
+- title: Packages management
+  contents:
+  - install_dependencies
+
 - title: Datasets
   contents:
   - titanic
