--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(proportion,data.frame)
 export(install_dependencies)
 export(proportion)
 export(titanic)
+export(unrowwise)
 importFrom(dplyr,as_tibble)
 importFrom(lifecycle,deprecated)
 importFrom(tidyr,uncount)
