--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cumdifferent)
 export(install_dependencies)
 export(is_different)
 export(is_equal)
+export(leading_zeros)
 export(num_cycle)
 export(proportion)
 export(titanic)
