--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(install_dependencies)
 export(is_different)
 export(is_equal)
 export(leading_zeros)
+export(long_to_periods)
 export(num_cycle)
 export(proportion)
+export(round_preserve_sum)
 export(titanic)
 export(unrowwise)
 importFrom(dplyr,as_tibble)
