--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,6 @@ export(titanic)
 export(unrowwise)
 importFrom(dplyr,as_tibble)
 importFrom(lifecycle,deprecated)
+importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(tidyr,uncount)
