plot_inertia_from_tree()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 S3method(proportion,data.frame)
 S3method(proportion,survey.design)
 export(cumdifferent)
+export(get_inertia_from_tree)
 export(install_dependencies)
 export(is_different)
 export(is_equal)
 export(leading_zeros)
 export(long_to_periods)
 export(num_cycle)
+export(plot_inertia_from_tree)
 export(proportion)
 export(round_preserve_sum)
 export(titanic)
