--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,11 @@ Depends:
 Imports:
     cli,
     dplyr,
+    ggplot2,
     labelled,
     lifecycle,
     pak,
+    patchwork,
     purrr,
     renv,
     rlang,
@@ -34,6 +36,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
+    FactoMineR,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
