observed_vs_theoretical()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(is_equal)
 export(leading_zeros)
 export(long_to_periods)
 export(num_cycle)
+export(observed_vs_theoretical)
 export(plot_inertia_from_tree)
 export(proportion)
 export(round_preserve_sum)
