step_with_na() first draft

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(proportion,data.frame)
 S3method(proportion,survey.design)
+S3method(step_with_na,default)
+S3method(step_with_na,svyglm)
 export(cumdifferent)
 export(get_inertia_from_tree)
 export(install_dependencies)
@@ -14,6 +16,7 @@ export(observed_vs_theoretical)
 export(plot_inertia_from_tree)
 export(proportion)
 export(round_preserve_sum)
+export(step_with_na)
 export(titanic)
 export(unrowwise)
 importFrom(dplyr,as_tibble)
