--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Imports:
     rlang,
     scales,
     srvyr,
+    survey,
     tidyr,
     tidyselect
 Encoding: UTF-8
@@ -39,6 +40,7 @@ RoxygenNote: 7.3.2
 Suggests: 
     broom.helpers,
     FactoMineR,
+    nnet,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
