--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,11 @@ Authors@R: c(
       comment = c(ORCID = "0000-0001-7097-700X")
     )
   )
-Description: Miscellaneous statistical functions introduced and used in the
-    manual "guide-R : Guide pour l’analyse de données d’enquêtes avec R"
-    available at <https://larmarange.github.io/guide-R/>.
+Description: Companion package for the manual
+  'guide-R : Guide pour l’analyse de données d’enquêtes avec R' available at
+  <https://larmarange.github.io/guide-R/>. 'guideR' implements miscellaneous
+  functions introduced in 'guide-R' to facilitate statistical analysis and
+  manipulation of survey data.
 License: GPL (>= 3)
 URL: https://larmarange.github.io/guideR/, https://github.com/larmarange/guideR
 BugReports: https://github.com/larmarange/guideR/issues
