--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Suggests:
     nnet,
     spelling,
     survey,
+    survival,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Language: en-US
