new function periods_to_long()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(leading_zeros)
 export(long_to_periods)
 export(num_cycle)
 export(observed_vs_theoretical)
+export(periods_to_long)
 export(plot_inertia_from_tree)
 export(proportion)
 export(round_preserve_sum)
