--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(proportion,survey.design)
 S3method(step_with_na,default)
 S3method(step_with_na,svyglm)
 export(cumdifferent)
+export(cut_quartiles)
 export(get_inertia_from_tree)
 export(install_dependencies)
 export(is_different)
