--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plot_proportions)
 export(proportion)
 export(round_preserve_sum)
 export(step_with_na)
+export(stratified_by)
 export(titanic)
 export(unrowwise)
 importFrom(dplyr,as_tibble)
