--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ export(cumdifferent)
 export(cut_quartiles)
 export(dummy_proportions)
 export(get_inertia_from_tree)
+export(grouped_tbl_pivot_wider)
 export(install_dependencies)
 export(is_different)
 export(is_equal)
 export(leading_zeros)
 export(long_to_periods)
+export(multinom_add_global_p_pivot_wider)
 export(num_cycle)
 export(observed_vs_theoretical)
 export(periods_to_long)
@@ -23,6 +25,7 @@ export(proportion)
 export(round_preserve_sum)
 export(step_with_na)
 export(stratified_by)
+export(style_grouped_tbl)
 export(titanic)
 export(unrowwise)
 importFrom(dplyr,as_tibble)
