--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
     broom.helpers,
+    cardx,
     FactoMineR,
     gt,
     gtsummary,
