new function plot_multiple_choice()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(num_cycle)
 export(observed_vs_theoretical)
 export(periods_to_long)
 export(plot_inertia_from_tree)
+export(plot_multiple_choice)
 export(plot_proportions)
 export(proportion)
 export(round_preserve_sum)
