--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(proportion,default)
 S3method(proportion,survey.design)
 S3method(step_with_na,default)
 S3method(step_with_na,svyglm)
+export(combine_items)
 export(cumdifferent)
 export(cut_quartiles)
 export(dummy_proportions)
