new function view_dictionary() and corresponding add-in

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,10 @@ export(step_with_na)
 export(stratified_by)
 export(style_grouped_tbl)
 export(titanic)
+export(to_DT)
 export(unrowwise)
+export(view_detailed_dictionary)
+export(view_dictionary)
 importFrom(dplyr,as_tibble)
 importFrom(lifecycle,deprecated)
 importFrom(rlang,.data)
