--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports:
     purrr,
     renv,
     rlang,
+    rstudioapi,
     scales,
     srvyr,
     stats,
@@ -45,11 +46,13 @@ RoxygenNote: 7.3.3
 Suggests: 
     broom.helpers,
     cardx,
+    DT,
     FactoMineR,
     ggupset,
     ggstats,
     gt,
     gtsummary,
+    htmltools,
     nnet,
     parameters,
     spelling,
