new function view_dictionary() and corresponding add-in to display a variable dictionary (#33)
* new function view_dictionary() and corresponding add-in

* less buttons

* missing imports

* lint

* font stack from GitHub

* update doc and wordking

* better presentation of user defined NAs

* adding some tests

* oups test file was pushed

* few additional tests

* interactive part not tested

* test update

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports:
     purrr,
     renv,
     rlang,
+    rstudioapi,
     scales,
     srvyr,
     stats,
@@ -45,11 +46,14 @@ RoxygenNote: 7.3.3
 Suggests: 
     broom.helpers,
     cardx,
+    DT,
     FactoMineR,
     ggupset,
     ggstats,
     gt,
     gtsummary,
+    htmltools,
+    htmlwidgets,
     nnet,
     parameters,
     spelling,
