--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(periods_to_long)
 export(plot_inertia_from_tree)
 export(plot_multiple_answers)
 export(plot_multiple_answers_dodge)
+export(plot_periods)
 export(plot_proportions)
 export(plot_trajectories)
 export(proportion)
