--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -27,6 +27,10 @@ reference:
   contents:
   - has_keyword("univar")
 
+- title: "Statistical plots"
+  contents:
+  - has_keyword("hplot")
+
 - title: "Models"
   contents:
   - has_keyword("models")
