--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,9 @@ export(periods_to_long)
 export(plot_inertia_from_tree)
 export(plot_multiple_answers)
 export(plot_multiple_answers_dodge)
+export(plot_periods)
 export(plot_proportions)
+export(plot_trajectories)
 export(proportion)
 export(round_preserve_sum)
 export(step_with_na)
