new utilities for tables generated with `gtsummary`
fix #34

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,19 @@ S3method(proportion,default)
 S3method(proportion,survey.design)
 S3method(step_with_na,default)
 S3method(step_with_na,svyglm)
+export(bold_variable_group_headers)
 export(combine_answers)
 export(cumdifferent)
 export(cut_quartiles)
 export(dummy_proportions)
 export(get_inertia_from_tree)
 export(grouped_tbl_pivot_wider)
+export(indent_labels)
+export(indent_levels)
 export(install_dependencies)
 export(is_different)
 export(is_equal)
+export(italicize_variable_group_headers)
 export(leading_zeros)
 export(long_to_periods)
 export(multinom_add_global_p_pivot_wider)
