theme_gtsummary_prop_n()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(round_preserve_sum)
 export(step_with_na)
 export(stratified_by)
 export(style_grouped_tbl)
+export(theme_gtsummary_prop_n)
 export(titanic)
 export(to_DT)
 export(unrowwise)
