theme_gtsummary_unweighted_n()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(step_with_na)
 export(stratified_by)
 export(style_grouped_tbl)
 export(theme_gtsummary_prop_n)
+export(theme_gtsummary_unweighted_n)
 export(titanic)
 export(to_DT)
 export(unrowwise)
