--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(combine_answers)
 export(cumdifferent)
 export(cut_quartiles)
 export(dummy_proportions)
+export(fisher.simulate.p)
 export(get_inertia_from_tree)
 export(grouped_tbl_pivot_wider)
 export(indent_labels)
