--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(round_preserve_sum)
 export(step_with_na)
 export(stratified_by)
 export(style_grouped_tbl)
+export(theme_gtsummary_bold_labels)
 export(theme_gtsummary_fisher_simulate_p)
 export(theme_gtsummary_prop_n)
 export(theme_gtsummary_unweighted_n)
