new function `plot_categorical()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(multinom_add_global_p_pivot_wider)
 export(num_cycle)
 export(observed_vs_theoretical)
 export(periods_to_long)
+export(plot_categorical)
 export(plot_inertia_from_tree)
 export(plot_multiple_answers)
 export(plot_multiple_answers_dodge)
