--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,10 @@ export(plot_proportions)
 export(plot_trajectories)
 export(proportion)
 export(round_preserve_sum)
+export(safe_pal)
+export(scale_color_safe)
+export(scale_colour_safe)
+export(scale_fill_safe)
 export(step_with_na)
 export(stratified_by)
 export(style_grouped_tbl)
