new function `svyoneway()` to test for equal means for survey design object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(scale_fill_safe)
 export(step_with_na)
 export(stratified_by)
 export(style_grouped_tbl)
+export(svyoneway)
 export(theme_gtsummary_bold_labels)
 export(theme_gtsummary_fisher_simulate_p)
 export(theme_gtsummary_prop_n)
