new function `plot_means()` to compare means by sub-groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(observed_vs_theoretical)
 export(periods_to_long)
 export(plot_categorical)
 export(plot_inertia_from_tree)
+export(plot_means)
 export(plot_multiple_answers)
 export(plot_multiple_answers_dodge)
 export(plot_periods)
