--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(step_with_na)
 export(stratified_by)
 export(style_grouped_tbl)
 export(svyoneway)
+export(svyttest_oneway)
 export(theme_gtsummary_bold_labels)
 export(theme_gtsummary_fisher_simulate_p)
 export(theme_gtsummary_prop_n)
