new method meadian_iqr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(mean_sd,data.frame)
 S3method(mean_sd,default)
 S3method(mean_sd,survey.design)
+S3method(median_iqr,data.frame)
+S3method(median_iqr,default)
+S3method(median_iqr,survey.design)
 S3method(proportion,data.frame)
 S3method(proportion,default)
 S3method(proportion,survey.design)
@@ -25,6 +28,7 @@ export(italicize_variable_group_headers)
 export(leading_zeros)
 export(long_to_periods)
 export(mean_sd)
+export(median_iqr)
 export(multinom_add_global_p_pivot_wider)
 export(num_cycle)
 export(observed_vs_theoretical)
