--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(num_cycle)
 export(observed_vs_theoretical)
 export(periods_to_long)
 export(plot_categorical)
+export(plot_continuous)
 export(plot_inertia_from_tree)
 export(plot_means)
 export(plot_multiple_answers)
