new function `long_to_seq()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(is_equal)
 export(italicize_variable_group_headers)
 export(leading_zeros)
 export(long_to_periods)
+export(long_to_seq)
 export(mean_sd)
 export(median_iqr)
 export(multinom_add_global_p_pivot_wider)
