--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,7 @@ Suggests:
     survey,
     survival,
     testthat (>= 3.0.0),
+    TraMineR,
     vdiffr
 Config/testthat/edition: 3
 Language: en-US
